pom cp/past error